# lifeless

./: Cargo.toml  README.md
examples/: tui.rs
src/: cell.rs  grid.rs  lib.rs  math.rs
