[package]
name = "lifeless"
version = "0.2.0"
edition = "2021"
authors = ["flippette <quangdatle2006@outlook.com>"]
license = "Unlicense"
description = "A no_std-friendly library for implementing Conway's Game of Life"
documentation = "https://docs.rs/lifeless"
repository = "https://github.com/flippette/lifeless"

[dev-dependencies]
crossterm = "0.27.0"
